overflow problem fixed

--- a/styling/style.css
+++ b/styling/style.css
@@ -60,6 +60,7 @@ body
     margin:12px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 8px;
+    overflow-y: auto;
 
     
    
